--- a/lobby.html
+++ b/lobby.html
@@ -59,7 +59,7 @@
 <!-- ÁUDIOS -->
 <audio id="sound-bg" src="sounds/casino.mp3" loop></audio>
 <audio id="sound-hover" src="sounds/hover.mp3"></audio>
-<audio id="sound-click" src="sounds/click.mp3"></audio>
+<audio id="sound-click" src="click.mp3"></audio>
 
 <button id="soundToggle" class="sound-btn">
   🔊 Som
