--- a/index.html
+++ b/index.html
@@ -8,32 +8,43 @@
 </head>
 <body>
 
-<div class="app">
+<div class="home">
 
-   <div class="banner-img">
-        <img src="ChatGPT.png" alt="Personagem Qcassino">
-   </div>
-  
-  <div class="logo">🎩 QCASINO</div>
+  <header class="top-bar">
+    <div class="logo">🎩 QCASINO</div>
+    <nav>
+      <a href="login.html" class="btn outline">Login</a>
+      <a href="cadastro.html" class="btn success">Criar conta</a>
+    </nav>
+  </header>
 
-  <!-- BANNER -->
-  <div class="banner-casino">
-    <div class="banner-text">
-      <h1>Bem-vindo ao <span>QCASINO</span></h1>
-      <p>Onde a sorte gira rápido 💰</p>
-      
-      <div style="margin-top:15px;">
-        <a href="login.html" class="btn primary">🔐 Login</a>
-        <a href="cadastro.html" class="btn success">📝 Criar conta</a>
+  <section class="hero">
+
+    <div class="hero-text">
+      <h1>
+        Entre no <span>QCASINO</span>
+      </h1>
+      <p>
+        A plataforma onde a sorte gira rápido  
+        <br>e o jogo nunca para 💰
+      </p>
+
+      <div class="hero-buttons">
+        <a href="login.html" class="btn primary big">🎰 Jogar agora</a>
+        <a href="cadastro.html" class="btn success big">📝 Criar conta</a>
       </div>
     </div>
 
-    
-  </div>
+    <div class="hero-img">
+      <img src="ChatGPT.png" alt="Personagem QCasino">
+    </div>
+
+  </section>
 
 </div>
 
 </body>
 </html>
+
 
 
