--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>QCassino</title>
+  <title>O Classino</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -11,7 +11,7 @@
 <div class="home">
 
   <header class="top-bar">
-    <div class="logo">🎩 QCASSINO</div>
+    <div class="logo">🎩 O Classino</div>
     <nav>
       <a href="login.html" class="btn outline">Login</a>
       <a href="cadastro.html" class="btn success">Criar conta</a>
@@ -22,7 +22,7 @@
 
     <div class="hero-text">
       <h1>
-        Entre no <span>QCASSINO</span>
+        Entre no <span>O Classino</span>
       </h1>
       <p>
         A plataforma onde a sorte gira rápido  
@@ -45,6 +45,7 @@
 
 </body>
 </html>
+
 
 
 
