--- a/index.html
+++ b/index.html
@@ -1,53 +1,35 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-  <meta charset="UTF-8">
-  <title>Q Classino</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+<div class="app">
+  <div class="card">
 
-<div class="home">
+    <div class="logo">🎩 QCASINO</div>
+    <p class="subtitle">Crie sua conta</p>
 
-  <header class="top-bar">
-    <div class="logo">🎩 Q Classino</div>
-    <nav>
-      <a href="login.html" class="btn outline">Login</a>
-      <a href="cadastro.html" class="btn success">Criar conta</a>
-    </nav>
-  </header>
+    <label>Nome completo</label>
+    <input type="text" placeholder="Seu nome completo">
 
-  <section class="hero">
+    <label>CPF</label>
+    <input type="text" placeholder="000.000.000-00">
 
-    <div class="hero-text">
-      <h1>
-        Entre no <span>Q Classino</span>
-      </h1>
-      <p>
-        A plataforma onde a sorte gira rápido  
-        <br>e o jogo nunca para 💰
-      </p>
+    <label>Data de nascimento</label>
+    <input type="date">
 
-      <div class="hero-buttons">
-        <a href="login.html" class="btn primary big">🎰 Jogar agora</a>
-        <a href="cadastro.html" class="btn success big">📝 Criar conta</a>
-      </div>
-    </div>
+    <label>Email</label>
+    <input type="email" placeholder="seuemail@gmail.com">
 
-    <div class="hero-img">
-      <img src="ChatGPT.png" alt="Personagem QCasino">
-    </div>
+    <label>Senha</label>
+    <input type="password" placeholder="Crie uma senha">
 
-  </section>
+    <label class="check">
+      <input type="checkbox">
+      Sou maior de 18 anos e aceito os
+      <a href="#">Termos</a>
+    </label>
 
+    <button class="btn primary">🎰 Criar conta</button>
+
+    <p class="msg">
+      Já tem conta? <a href="login.html">Entrar</a>
+    </p>
+
+  </div>
 </div>
-
-</body>
-</html>
-
-
-
-
-
-
