--- a/index.html
+++ b/index.html
@@ -1,35 +1,30 @@
-<div class="app">
-  <div class="card">
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8">
+  <title>QCasino</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
 
-    <div class="logo">🎩 QCASINO</div>
-    <p class="subtitle">Crie sua conta</p>
+<header class="top">
+  🎩 <strong>QCASINO</strong>
+</header>
 
-    <label>Nome completo</label>
-    <input type="text" placeholder="Seu nome completo">
+<section class="hero">
+  <div class="hero-text">
+    <h1>Onde a sorte gira rápido</h1>
+    <p>Aposte, jogue e ganhe com estilo 💰</p>
 
-    <label>CPF</label>
-    <input type="text" placeholder="000.000.000-00">
-
-    <label>Data de nascimento</label>
-    <input type="date">
-
-    <label>Email</label>
-    <input type="email" placeholder="seuemail@gmail.com">
-
-    <label>Senha</label>
-    <input type="password" placeholder="Crie uma senha">
-
-    <label class="check">
-      <input type="checkbox">
-      Sou maior de 18 anos e aceito os
-      <a href="#">Termos</a>
-    </label>
-
-    <button class="btn primary">🎰 Criar conta</button>
-
-    <p class="msg">
-      Já tem conta? <a href="login.html">Entrar</a>
-    </p>
-
+    <div class="hero-buttons">
+      <a href="login.html" class="btn primary">🔐 Entrar</a>
+      <a href="cadastro.html" class="btn success">📝 Criar conta</a>
+    </div>
   </div>
-</div>
+
+  <img src="assets/personagem.png" alt="QCasino">
+</section>
+
+</body>
+</html>
