--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
     </div>
   </div>
 
-  <img src="assets/personagem.png" alt="QCasino">
+  <img src="ChatGPT.png" alt="QCasino">
 </section>
 
 </body>
 </html>
+
 
 
