--- a/login.html
+++ b/login.html
@@ -13,10 +13,15 @@
 
     <h2>🎩 Entrar no QCasino</h2>
 
-    <input type="email" placeholder="Email">
-    <input type="password" placeholder="Senha">
+    <input id="email" type="email" placeholder="Email">
+    <input id="senha" type="password" placeholder="Senha">
 
-    <button class="btn primary">Entrar</button>
+    <button onclick="login()" class="btn success">
+  🔐 Entrar
+</button>
+
+<p id="msg" class="msg"></p>
+
 
     <p class="link">
       Não tem conta? <a href="cadastro.html">Criar agora</a>
@@ -27,4 +32,5 @@
 
 </body>
 </html>
+
 
