--- a/cadastro.html
+++ b/cadastro.html
@@ -13,11 +13,12 @@
 
     <h2>📝 Criar conta</h2>
 
-    <input type="text" placeholder="Nome completo">
-    <input type="text" placeholder="CPF">
-    <input type="date">
-    <input type="email" placeholder="Email">
-    <input type="password" placeholder="Senha">
+    <input id="nome" placeholder="Nome completo">
+    <input id="cpf" placeholder="CPF">
+    <input id="nascimento" type="date">
+    <input id="email" type="email">
+    <input id="senha" type="password">
+    <input type="checkbox" id="maior18">
 
     <label class="check">
       <input type="checkbox">
@@ -36,4 +37,5 @@
 
 </body>
 </html>
+
 
