--- a/cadastro.html
+++ b/cadastro.html
@@ -23,7 +23,12 @@
       oninput="this.value = this.value.replace(/[^0-9.-]/g, '')"
     />
     <input id="nascimento" type="date">
-    <input id="email" type="email">
+    <input
+      id="email"
+      type="email"
+      placeholder="seuemail@gmail.com"
+      required
+    />
     <input id="senha" type="password">
     <input type="checkbox" id="maior18">
       Sou maior de 18 anos e aceito os
@@ -41,6 +46,7 @@
 
 </body>
 </html>
+
 
 
 
