--- a/cadastro.html
+++ b/cadastro.html
@@ -29,7 +29,15 @@
       placeholder="seuemail@gmail.com"
       required
     />
-    <input id="senha" type="password">
+   <div class="senha-box">
+  <input
+    id="senha"
+    type="password"
+    placeholder="Crie uma senha"
+    required
+  />
+  <span class="toggle" onclick="toggleSenha()">👁</span>
+</div>
     <input type="checkbox" id="maior18">
       Sou maior de 18 anos e aceito os
       <a href="#">Termos</a>
@@ -46,6 +54,7 @@
 
 </body>
 </html>
+
 
 
 
