--- a/cadastro.html
+++ b/cadastro.html
@@ -43,7 +43,9 @@
       <a href="#">Termos</a>
     </label>
 
-    <button class="btn success">Criar conta</button>
+   <button class="btn success" onclick="cadastrar()">
+      Criar conta
+  </button>
 
     <p class="link">
       Já tem conta? <a href="login.html">Entrar</a>
@@ -54,6 +56,7 @@
 
 </body>
 </html>
+
 
 
 
