--- a/login.html
+++ b/login.html
@@ -30,8 +30,20 @@
   </div>
 </div>
 <script type="module" src="auth.js"></script>
+<script type="module">
+  import { auth } from "./firebase.js";
+  import { onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
+
+  onAuthStateChanged(auth, user => {
+    if (user) {
+      // já está logado → manda pro lobby
+      window.location.href = "lobby.html";
+    }
+  });
+</script>
 </body>
 </html>
+
 
 
 
