--- a/lobby.html
+++ b/lobby.html
@@ -84,6 +84,12 @@
     window.location.href = "login.html";
   };
 </script>
+<script>
+  history.pushState(null, null, location.href);
+  window.onpopstate = () => {
+    history.go(1);
+  };
+</script>
 
 </body>
 </html>
