--- a/lobby.html
+++ b/lobby.html
@@ -13,8 +13,12 @@
   <!-- TOPO -->
   <header class="topbar">
     <div class="logo">🎩 QCASINO</div>
-    <div class="saldo">💰 Saldo: <span id="saldo">10</span> créditos</div>
-    <button onclick="sair()" class="btn danger">🚪 Sair</button>
+    <div class="user-info">
+  👤 <span id="nomeUsuario">---</span><br>
+  💰 Saldo: <span id="saldo">0</span> créditos
+</div>
+
+<button onclick="sair()" class="btn danger">🚪 Sair</button>
   </header>
 
   <!-- BANNER -->
@@ -67,6 +71,36 @@
 </button>
 
 <script src="sounds.js"></script>
+
+<script type="module">
+  import { auth, db } from "./firebase.js";
+  import { onAuthStateChanged, signOut } from
+    "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
+  import { doc, getDoc } from
+    "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
+
+  onAuthStateChanged(auth, async (user) => {
+    if (!user) {
+      window.location.href = "login.html";
+      return;
+    }
+
+    const ref = doc(db, "users", user.uid);
+    const snap = await getDoc(ref);
+
+    if (snap.exists()) {
+      const dados = snap.data();
+      document.getElementById("nomeUsuario").innerText = dados.nome;
+      document.getElementById("saldo").innerText = dados.saldo;
+    }
+  });
+
+  window.sair = async () => {
+    await signOut(auth);
+    window.location.href = "login.html";
+  };
+</script>
+
 <script type="module">
   import { auth } from "./firebase.js";
   import { onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
