--- a/lobby.html
+++ b/lobby.html
@@ -102,6 +102,43 @@
 </script>
 
 <script type="module">
+  import { auth, db } from "./firebase.js";
+  import { onAuthStateChanged, signOut } from
+    "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
+  import { doc, getDoc } from
+    "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
+
+  onAuthStateChanged(auth, async (user) => {
+    if (!user) {
+      window.location.href = "login.html";
+      return;
+    }
+
+    try {
+      const ref = doc(db, "usuarios", user.uid);
+      const snap = await getDoc(ref);
+
+      if (snap.exists()) {
+        const dados = snap.data();
+        document.getElementById("nomeUsuario").innerText = dados.nome;
+        document.getElementById("saldo").innerText = dados.saldo;
+      } else {
+        console.log("Documento do usuário não existe");
+      }
+
+    } catch (err) {
+      console.error("Erro ao buscar dados:", err);
+    }
+  });
+
+  window.sair = async () => {
+    await signOut(auth);
+    window.location.href = "login.html";
+  };
+</script>
+
+  
+<script type="module">
   import { auth } from "./firebase.js";
   import { onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
 
