--- a/lobby.html
+++ b/lobby.html
@@ -69,7 +69,7 @@
 <button id="soundToggle" class="sound-btn">
   🔊 Som
 </button>
-
+<script type="module" src="lobby.js"></script>
 </body>
 </html>
 
