--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <header class="top">
-  🎩 <strong>QCASINO</strong>
+   <strong></strong>
 </header>
 
 <section class="hero">
@@ -28,6 +28,7 @@
 <script type="module" src="index.js"></script>
 </body>
 </html>
+
 
 
 
