--- a/lobby.html
+++ b/lobby.html
@@ -13,6 +13,7 @@
   <!-- TOPO -->
   <header class="topbar">
     <div class="logo">🎩 QCASINO</div>
+    <img src="ChatGPT.png" alt="QCasino">
     <div class="user-info">
   👤 <span id="nomeUsuario">---</span><br>
   💰 Saldo: <span id="saldo">0</span> créditos
