--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
   <div class="card">
 
     <h2>🎩 Entrar no QCasino</h2>
-
+    <img src="ChatGPT.png" alt="QCasino">
     <input id="email" type="email" placeholder="Email">
     <input id="senha" type="password" placeholder="Senha">
 
@@ -32,6 +32,7 @@
 <script type="module" src="auth.js"></script>
 </body>
 </html>
+
 
 
 
