--- a/cadastro.html
+++ b/cadastro.html
@@ -11,7 +11,7 @@
 <div class="app">
   <div class="card">
 
-    <h2>📝 Criar conta</h2>
+    <img src="ChatGPT.png" alt="QCasino">
 
     <input id="nome" placeholder="Nome completo">
 
@@ -62,3 +62,4 @@
 <script type="module" src="auth.js"></script>
 </body>
 </html>
+
