--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
 <div class="app">
     
   <div class="card">
-    <img src="ChatGPT.png" alt="QCasino">
+    <img src="ChatGPT.png">
     <input id="email" type="email" placeholder="Email">
     <input id="senha" type="password" placeholder="Senha">
 
@@ -31,6 +31,7 @@
 <script type="module" src="auth.js"></script>
 </body>
 </html>
+
 
 
 
