--- a/cadastro.html
+++ b/cadastro.html
@@ -9,6 +9,7 @@
 <body>
 
 <div class="app">
+    <img src="ChatGPT.png">
   <div class="card">
 
     <input id="nome" placeholder="Nome completo">
@@ -60,5 +61,6 @@
 <script type="module" src="auth.js"></script>
 </body>
 </html>
+
 
 
