--- a/cadastro.html
+++ b/cadastro.html
@@ -11,7 +11,7 @@
 <div class="app">
     
   <div class="card">
-    <img src="ChatGPT.png">
+   <img class="perso" src="ChatGPT.png" alt="Mascote QCasino">
     <input id="nome" placeholder="Nome completo">
 
     <input
@@ -61,6 +61,7 @@
 <script type="module" src="auth.js"></script>
 </body>
 </html>
+
 
 
 
