--- a/index.html
+++ b/index.html
@@ -1,36 +1,28 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>QCasino</title>
+  <title>Qcassino</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<header class="top">
-   <strong></strong>
-</header>
+  <div class="hero">
+    <div class="hero-card">
 
-<section class="hero">
-  <div class="hero-text">
-     <img src="ChatGPT.png" alt="QCasino">
-    <h1>Onde a sorte gira rápido</h1>
-    <p>Aposte, jogue e ganhe com estilo 💰</p>
+      <img src="ChatGPT.png" class="mascote">
 
-    <div class="hero-buttons">
-      <a href="login.html" class="btn primary">🔐 Entrar</a>
-      <a href="cadastro.html" class="btn success">📝 Criar conta</a>
+      <h1>QCassino 🎰</h1>
+      <p>Onde a sorte gira rápido</p>
+
+      <div class="botoes">
+        <a href="login.html" class="btn primary">🔐 Entrar</a>
+        <a href="cadastro.html" class="btn success">📝 Criar Conta</a>
+      </div>
+
     </div>
   </div>
-
-</section>
 <script type="module" src="index.js"></script>
 </body>
 </html>
-
-
-
-
-
-
