--- a/login.html
+++ b/login.html
@@ -44,3 +44,36 @@
 
 
 
+
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8">
+  <title>Login - Qcassino</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+<div class="app">
+  <div class="card">
+
+    <img src="ChatGPT.png" class="mascote pequeno">
+
+    <input id="email" type="email" placeholder="Email">
+    <input id="senha" type="password" placeholder="Senha">
+
+    <button onclick="login()" class="btn success">
+  🔐 Entrar
+</button>
+    
+    <p class="link">
+      Não tem conta? <a href="cadastro.html">Criar agora</a>
+    </p>
+    
+  </div>
+
+</div>
+<script type="module" src="auth.js"></script>
+</body>
+</html>
