--- a/cadastro.html
+++ b/cadastro.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>Cadastro - QCasino</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
+  <title>Cadastro - Qcassino</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<div class="app">
-    
+  <div class="app">
   <div class="card">
-   <img class="perso" src="ChatGPT.png" alt="Mascote QCasino">
+
+    <img src="ChatGPT.png" class="mascote pequeno">
+    
     <input id="nome" placeholder="Nome completo">
 
     <input
@@ -57,12 +57,6 @@
 
   </div>
 </div>
-
 <script type="module" src="auth.js"></script>
 </body>
 </html>
-
-
-
-
-
