--- a/cadastro.html
+++ b/cadastro.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Cadastro - Qcassino</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
@@ -60,3 +60,4 @@
 <script type="module" src="auth.js"></script>
 </body>
 </html>
+
