--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
     <button onclick="login()" class="btn success">
   🔐 Entrar
 </button>
-    
+    <p id="msg" class="msg"></p>
     <p class="link">
       Não tem conta? <a href="cadastro.html">Criar agora</a>
     </p>
@@ -30,5 +30,6 @@
 <script type="module" src="auth.js"></script>
 </body>
 </html>
+
 
 
