--- a/lobby.html
+++ b/lobby.html
@@ -12,7 +12,9 @@
 
   <!-- TOPO -->
   <header class="topbar">
-    <div class="logo">🎩 QCASINO</div>
+    <div class="logo">
+  <img src="ChatGPT.png" alt="QCasino" class="logo-img">
+    </div>
     
     <div class="user-info">
   👤 <span id="nomeUsuario">---</span><br>
