--- a/lobby.html
+++ b/lobby.html
@@ -19,7 +19,7 @@
     <div class="user-info">
   👤 <span id="nomeUsuario">---</span><br>
   💰 Saldo: <span id="saldo">0</span> créditos
-      <button onclick="sair()" class="btn danger">🚪 Sair</button>
+      <button id="sair" onclick="sair()" class="btn danger">🚪 Sair</button>
     </div>
   </header>
 
