--- a/cadastro.html
+++ b/cadastro.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
   <meta charset="UTF-8">
   <title>Cadastro - Qcassino</title>
   <link rel="stylesheet" href="styles.css">
@@ -59,5 +60,6 @@
 <script type="module" src="auth.js"></script>
 </body>
 </html>
+
 
 
