--- a/lobby.html
+++ b/lobby.html
@@ -33,10 +33,12 @@
   <section class="games">
 
     <div class="game-card">
-      <div class="icon">🍒</div>
-      <h3>Caça-Níquel</h3>
+      <div id="Coringa" class="Coringa"><img src="Joker.png"> </div>
+      <h3>Caça-Níquel Do Coringa</h3>
       <p>Gire e ganhe prêmios</p>
-      <button>Jogar</button>
+      <button onclick="window.location.href='slot.html'">
+        Jogar
+      </button>
     </div>
 
     <div class="game-card">
