--- a/slot.html
+++ b/slot.html
@@ -17,9 +17,9 @@
     </header>
 
     <div class="slots">
-      <div id="r1" class="slot">🍒</div>
-      <div id="r2" class="slot">🍋</div>
-      <div id="r3" class="slot">🔔</div>
+      <div id="r1" class="slot"> <img src="Joker.png">  </div>
+      <div id="r2" class="slot"><img src="Joker1.png"></div>
+      <div id="r3" class="slot"><img src="Joker2.png"></div>
     </div>
 
     <button id="btnSpin" class="btn-spin" onclick="jogar()">
