--- a/lobby.html
+++ b/lobby.html
@@ -2,8 +2,8 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Lobby - QCasino</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+  <title>Lobby - QCassino</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="lobby.css">
 </head>
 <body>
@@ -17,15 +17,15 @@
     </div>
     
     <div class="user-info">
-  👤 <span id="nomeUsuario">---</span><br>
-  💰 Saldo: <span id="saldo">0</span> créditos
+  Seu Nome👤 <span id="nomeUsuario">---</span><br>
+  💰 R$: <span id="saldo">0</span> Reais
       <button id="sair" onclick="sair()" class="btn danger">🚪 Sair</button>
     </div>
   </header>
 
   <!-- BANNER -->
   <section class="lobby-banner">
-    <h1>🎰 Bem-vindo ao QCASINO</h1>
+    <h1>🎰 Bem-vindo ao QCASSINO</h1>
     <p>Aposte com inteligência. A sorte gira rápido.</p>
   </section>
 
