--- a/slot.html
+++ b/slot.html
@@ -22,9 +22,10 @@
       <div id="r3" class="slot"><img src="Joker2.png"></div>
     </div>
 
-    <button id="btnSpin" class="btn-spin" onclick="jogar()">
+    <button id="btnSpin" class="btn-spin" onclick="jogar()" disabled>
   🎲 GIRAR
 </button>
+
     
 <p>Aposta atual: <span id="apostaValor">1</span> crédito(s)</p>
 
