--- a/lobby.html
+++ b/lobby.html
@@ -45,21 +45,21 @@
       <div class="icon">🎲</div>
       <h3>Dice</h3>
       <p>Aposte no número certo</p>
-      <button>Jogar</button>
+      <button>EM BREVE</button>
     </div>
 
     <div class="game-card">
       <div class="icon">🃏</div>
       <h3>Blackjack</h3>
       <p>21 ou nada</p>
-      <button>Jogar</button>
+      <button>EM BREVE</button>
     </div>
 
     <div class="game-card">
       <div class="icon">💎</div>
       <h3>Roleta</h3>
       <p>Vermelho ou Preto</p>
-      <button>Jogar</button>
+      <button>EM BREVE</button>
     </div>
 
   </section>
@@ -76,4 +76,3 @@
 <script type="module" src="lobby.js"></script>
 </body>
 </html>
-
