--- a/lobby.html
+++ b/lobby.html
@@ -19,8 +19,12 @@
     <div class="user-info">
   Seu Nome👤 <span id="nomeUsuario">---</span><br>
   💰 R$: <span id="saldo">0</span> Reais
-      <button id="sair" onclick="sair()" class="btn danger">🚪 Sair</button>
-    </div>
+        <button id="sair" onclick="sair()" class="btn danger">🚪 Sair</button>
+        <button id="btnAdmin" class="btn danger" style="display:none;">
+  🛠 Painel Admin
+</button>
+
+      </div>
   </header>
 
   <!-- BANNER -->
