--- a/admin-slot.html
+++ b/admin-slot.html
@@ -11,9 +11,11 @@
   <input type="number" step="0.01" id="chance" />
 
   <label>
-    <input type="checkbox" id="ativo" />
-    Slot Ativo
-  </label>
+   <input type="checkbox" id="slotAtivo">
 
-  <button onclick="salvarConfigSlot()">💾 Salvar</button>
+<input type="number" id="mult2" value="2">
+<input type="number" id="mult3" value="4">
+
+<button onclick="salvarConfigSlot()">Salvar</button>
 </section>
+
