--- a/admin-slot.html
+++ b/admin-slot.html
@@ -2,20 +2,16 @@
   <h2>🎰 Config Slot</h2>
 
   <label>Multiplicador 2 Cartas</label>
-  <input type="number" id="mult2" />
+  <input type="number" id="mult2" value="2">
 
   <label>Multiplicador 3 Cartas</label>
-  <input type="number" id="mult3" />
-
-  <label>Chance de Ganhar (0 a 1)</label>
-  <input type="number" step="0.01" id="chance" />
+  <input type="number" id="mult3" value="4">
 
   <label>
-   <input type="checkbox" id="slotAtivo">
+    <input type="checkbox" id="slotAtivo"> Slot Ativo
+  </label>
 
-<input type="number" id="mult2" value="2">
-<input type="number" id="mult3" value="4">
-
-<button onclick="salvarConfigSlot()">Salvar</button>
+  <button onclick="salvarConfigSlot()">Salvar</button>
 </section>
 
+<script type="module" src="admin-slot.js"></script>
