--- a/admin-slot.html
+++ b/admin-slot.html
@@ -7,6 +7,9 @@
   <label>Multiplicador 3 Cartas</label>
   <input type="number" id="mult3" value="4">
 
+  <label>Chance de Ganhar (0 a 1)</label>
+  <input type="number" id="chance" value="0.3" step="0.01">
+
   <label>
     <input type="checkbox" id="slotAtivo"> Slot Ativo
   </label>
