--- a/admin-slot.html
+++ b/admin-slot.html
@@ -11,10 +11,11 @@
   <input type="number" id="chance" value="0.3" step="0.01">
 
   <label>
-    <input type="checkbox" id="slotAtivo"> Slot Ativo
+    <input type="checkbox" id="slotAtivo" checked> Slot Ativo
   </label>
 
   <button onclick="salvarConfigSlot()">Salvar</button>
 </section>
 
 <script type="module" src="admin-slot.js"></script>
+
