--- a/lobby.html
+++ b/lobby.html
@@ -46,10 +46,12 @@
     </div>
 
     <div class="game-card">
-      <div class="icon">🎲</div>
-      <h3>Dice</h3>
-      <p>Aposte no número certo</p>
-      <button>EM BREVE</button>
+     <div id="Coringa" class="Coringa"><img src="Joker.png"> </div>
+      <h3>Crash Do DragonBall Z</h3>
+      <p>Venha Conheçer o Crash Do DragonBall Z</p>
+      <button onclick="window.location.href='crash.html'">
+        Jogar
+      </button>
     </div>
 
     <div class="game-card">
