--- a/crash.html
+++ b/crash.html
@@ -2,24 +2,20 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>Crash - QCassino</title>
+  <title>Crash - Qcassino</title>
   <link rel="stylesheet" href="crash.css">
 </head>
 <body>
 
-<div class="crash-card">
+<div class="card">
   <h1>🚀 CRASH</h1>
 
-  <div class="saldo">Saldo: R$ <span id="saldo">0</span></div>
+  <p id="status">Aguardando jogadores...</p>
+  <p>Multiplicador: <span id="multi">1.00x</span></p>
 
-  <input type="number" id="aposta" value="1" min="1">
-
-  <div id="mult">1.00x</div>
-
-  <div class="controls">
-    <button id="btnStart">▶️ Iniciar</button>
-    <button id="btnCashout" disabled>💰 Sacar</button>
-  </div>
+  <input id="aposta" type="number" value="1" min="1">
+  <button onclick="entrar()">Entrar</button>
+  <button onclick="sacar()">💰 Sacar</button>
 
   <p id="msg"></p>
 </div>
