--- a/lobby.html
+++ b/lobby.html
@@ -48,11 +48,11 @@
 
     <div class="game-card">
       <div class="game-img">
-        <img src="Joker.png" alt="Crash">
+        <img src="Joker2.png" alt="Crash">
       </div>
       <h3>Crash Dragon Ball Z</h3>
       <p>Multiplicador explosivo</p>
-      <button onclick="location.href='crash.html'">Jogar</button>
+      <button disabled>EM BREVE</button>
     </div>
 
     <div class="game-card disabled">
