--- a/lobby.html
+++ b/lobby.html
@@ -48,7 +48,7 @@
 
     <div class="game-card">
       <div class="game-img">
-        <img src="Joker2.png" alt="Crash">
+        <img src="Nuvem.png" alt="Crash">
       </div>
       <h3>Crash Dragon Ball Z</h3>
       <p>Multiplicador explosivo</p>
